fixed styling on team

--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -7,7 +7,7 @@
 <html lang="en">
 
 <head>
-    <title>Team Members</title>
+  
     <style>
         .member {
             position: relative;
@@ -48,8 +48,11 @@
     </style>
 </head>
 
+<div class="section-title">
+  <h2>Team Members</h2>
+  <p>Meet the Minds Behind our Success</p>
+</div>
 <body>
-    <h2>Team Members</h2>
     <div class="container">
         <div class="row">
             
