--- a/web_app/templates/menu.html
+++ b/web_app/templates/menu.html
@@ -3,187 +3,200 @@
 
 {% block content %}
 
-<!-- ======= Menu Section ======= -->
-<section id="menu" class="menu section-bg">
-    <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
+    <!-- ======= Menu Section ======= -->
+    <section id="menu" class="menu section-bg">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
             <h2>Menu</h2>
-            <p>Check Our Tasty Menu</p>
-        </div>
-
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+            <p>Check Our Menu</p>
+          </div>
+  
+          <div class="row" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-12 d-flex justify-content-center">
-                <ul id="menu-flters">
-                    <li data-filter="*" class="filter-active">All</li>
-                    <li data-filter=".filter-classics">Classics</li>
-                    <li data-filter=".filter-espresso">Espresso</li>
-                </ul>
+              <ul id="menu-flters">
+                <li data-filter="*" class="filter-active">Classics</li>
+                <li data-filter=".filter-espresso">Espresso</li>
+                <li data-filter=".filter-specialty">Specialty</li>
+              </ul>
             </div>
-        </div>
-
-        <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-
-            <!-- Classics -->
-            <div class="col-lg-6 menu-item filter-classics">
-                <div class="menu-content">
-                    <h4>Classics</h4>
-                </div>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col"></th>
-                            <th scope="col">HOT</th>
-                            <th scope="col" colspan="2">Iced</th>
-                        </tr>
-                        <tr>
-                            <th scope="col">Item</th>
-                            <th scope="col">S</th>
-                            <th scope="col">M</th>
-                            <th scope="col">L</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Coffee</td>
-                            <td>2.55</td>
-                            <td>2.95</td>
-                            <td>3.25</td>
-                            <td>3.00</td>
-                            <td>3.50</td>
-                        </tr>
-                        <tr>
-                            <td>Tea</td>
-                            <td>2.55</td>
-                            <td>2.95</td>
-                            <td>3.15</td>
-                            <td>2.95</td>
-                            <td>3.45</td>
-                        </tr>
-                        <tr>
-                            <td>Half and Half</td>
-                            <td>3.60</td>
-                            <td>3.75</td>
-                            <td>4.15</td>
-                            <td>3.95</td>
-                            <td>4.50</td>
-                        </tr>
-                        <tr>
-                            <td>Hot Chocolate</td>
-                            <td>3.75</td>
-                            <td>3.95</td>
-                            <td>4.25</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Matcha Latte</td>
-                            <td>4.30</td>
-                            <td>4.80</td>
-                            <td>5.40</td>
-                            <td>5.10</td>
-                            <td>5.50</td>
-                        </tr>
-                        <tr>
-                            <td>Chai Latte</td>
-                            <td>4.05</td>
-                            <td>4.55</td>
-                            <td>5.15</td>
-                        </tr>
-                        <tr>
-                            <td>Cafe Au Lait</td>
-                            <td>3.10</td>
-                            <td>3.55</td>
-                            <td>4.00</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Steamer</td>
-                            <td>3.20</td>
-                            <td>3.45</td>
-                            <td>3.75</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Italian Soda</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>3.50</td>
-                            <td>4.00</td>
-                        </tr>
-                    </tbody>
-                </table>
+          </div>
+  
+          <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
+  <!-- Classics menu items -->
+  <h3 class="menu-divider">Classics</h3>
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/coffee.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Coffee</a><span>Hot: $2.55 - $3.25 | Iced: $3.00 - $3.50</span>
+              </div>
+              <div class="menu-ingredients">
+                Freshly brewed coffee served hot or iced
+              </div>
+            </div>
+  
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/tea.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Tea</a><span>Hot: $2.55 - $3.15 | Iced: $2.95 - $3.45</span>
+              </div>
+              <div class="menu-ingredients">
+                A selection of fine teas served hot or iced
+              </div>
+            </div>
+  
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/half_and_half.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Half and Half</a><span>Hot: $3.60 - $4.15 | Iced: $3.95 - $4.50</span>
+              </div>
+              <div class="menu-ingredients">
+                A balanced blend of coffee and tea
+              </div>
+            </div>
+  
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/hot_chocolate.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Hot Chocolate</a><span>$3.75 - $4.25</span>
+              </div>
+              <div class="menu-ingredients">
+                Rich and velvety hot chocolate made with premium cocoa and steamed milk
+              </div>
+            </div>
+  
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/matcha_latte.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Matcha Latte</a><span>Hot: $4.30 - $5.40 | Iced: $5.10 - $5.50</span>
+             
+              </div>
+              <div class="menu-ingredients">
+                Rich and smooth matcha latte made with high-quality matcha powder
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/chai_latte.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Chai Latte</a><span>Hot: $4.05 - $5.15 | Iced: $4.85 - $5.25</span>
+              </div>
+              <div class="menu-ingredients">
+                Aromatic and flavorful chai latte made with a blend of spices and tea
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/cafe_au_lait.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Cafe Au Lait</a><span>$3.10 - $4.00</span>
+              </div>
+              <div class="menu-ingredients">
+                Classic French-style coffee made with equal parts brewed coffee and steamed milk
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-active">
+              <img src="/static/assets/img/italian_soda.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Italian Soda</a><span>$3.50 - $4.00</span>
+              </div>
+              <div class="menu-ingredients">
+                Refreshing and bubbly Italian soda with your choice of fruit flavors
+              </div>
             </div>
 
-            <!-- Espresso -->
-            <div class="col-lg-6 menu-item filter-espresso">
-                <div class="menu-content">
-                    <h4>Espresso</h4>
-                </div>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Item</th>
-                            <th scope="col">S</th>
-                            <th scope="col">M</th>
-                            <th scope="col">L</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Espresso</td>
-                            <td>2.55</td>
-                            <td>2.95</td>
-                            <td>3.25</td>
-                        </tr>
-                        <tr>
-                            <td>Latte</td>
-                            <td>2.55</td>
-                            <td>2.95</td>
-                            <td>3.15</td>
-                        </tr>
-                        <tr>
-                            <td>Cappuccino</td>
-                            <td>3.60</td>
-                            <td>3.75</td>
-                            <td>4.15</td>
-                        </tr>
-                        <tr>
-                            <td>Red Eye</td>
-                            <td>3.75</td>
-                            <td>3.95</td>
-                            <td>4.25</td>
-                        </tr>
-                        <tr>
-                            <td>Americano</td>
-                            <td>4.30</td>
-                            <td>4.80</td>
-                            <td>5.40</td>
-                        </tr>
-                        <tr>
-                            <td>Macchiato</td>
-                            <td>4.05</td>
-                            <td>4.55</td>
-                            <td>5.15</td>
-                        </tr>
-                        <tr>
-                            <td>Mocha</td>
-                            <td>3.10</td>
-                            <td>3.55</td>
-                            <td>4.00</td>
-                        </tr>
-                        <tr>
-                            <td>Dirty Chai</td>
-                            <td>3.20</td>
-                            <td>3.45</td>
-                            <td>3.75</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
 
-        </div>
+    <!-- Divider -->
+    <div class="col-12">
+      <hr>
     </div>
+
+    <!-- Espresso menu items -->
+    <h3 class="menu-divider">Espresso</h3>
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/espresso.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Espresso</a><span>$2.55 - $3.25</span>
+              </div>
+              <div class="menu-ingredients">
+                Bold and intense espresso made with freshly ground coffee beans
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/latte.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Latte</a><span>$2.55 - $3.15</span>
+              </div>
+              <div class="menu-ingredients">
+                Smooth and creamy latte with a delicate balance of coffee and milk
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/cappuccino.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Cappuccino</a><span>$3.60 - $4.15</span>
+              </div>
+              <div class="menu-ingredients">
+                Aromatic and rich cappuccino with perfectly frothed milk
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/red_eye.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Red Eye</a><span>$3.75 - $4.25</span>
+              </div>
+              <div class="menu-ingredients">
+                A bold coffee drink made with espresso and brewed coffee for an extra kick
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/americano.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Americano</a><span>$4.30 - $5.40</span>
+              </div>
+              <div class="menu-ingredients">
+                A rich and bold Americano made by adding hot water to a shot of espresso
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/macchiato.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Macchiato</a><span>$4.05 - $5.15</span>
+              </div>
+              <div class="menu-ingredients">
+                An espresso-based drink with a small amount of steamed milk, perfect for savoring the coffee flavor
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/mocha.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Mocha</a><span>$3.10 - $4.00</span>
+              </div>
+              <div class="menu-ingredients">
+                A delicious mocha made with espresso, steamed milk, and rich chocolate syrup
+              </div>
+            </div>
+    
+            <div class="col-lg-6 menu-item filter-espresso">
+              <img src="/static/assets/img/dirty_chai.jpg" class="menu-img" alt="">
+              <div class="menu-content">
+                <a href="#">Dirty Chai</a><span>$3.20 - $3.75</span>
+              </div>
+              <div class="menu-ingredients">
+                A tasty twist on the classic chai latte, made with an added shot of espresso for a caffeinated boost
+              </div>
+            </div>
+    
+          </div>
+    
+        </div>
+      </section><!-- End Menu Section -->
+    
+{% endblock %}
