--- a/web_app/templates/menu.html
+++ b/web_app/templates/menu.html
@@ -56,7 +56,7 @@
             </div>
   
             <div class="col-lg-6 menu-item filter-active">
-              <img src="/static/assets/img/hot_chocolate.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/hot chocolate.webp" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Hot Chocolate</a><span>$3.75 - $4.25</span>
               </div>
@@ -66,7 +66,7 @@
             </div>
   
             <div class="col-lg-6 menu-item filter-active">
-              <img src="/static/assets/img/matcha_latte.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/matcha latte.webp" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Matcha Latte</a><span>Hot: $4.30 - $5.40 | Iced: $5.10 - $5.50</span>
              
@@ -77,7 +77,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-active">
-              <img src="/static/assets/img/chai_latte.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/chai latte.jpg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Chai Latte</a><span>Hot: $4.05 - $5.15 | Iced: $4.85 - $5.25</span>
               </div>
@@ -87,7 +87,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-active">
-              <img src="/static/assets/img/cafe_au_lait.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/cafe au lait.jpg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Cafe Au Lait</a><span>$3.10 - $4.00</span>
               </div>
@@ -97,7 +97,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-specialty">
-              <img src="/static/assets/img/italian_soda.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/italian soda.jpg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Italian Soda</a><span>$3.50 - $4.00</span>
               </div>
@@ -125,7 +125,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-espresso">
-              <img src="/static/assets/img/latte.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/latte.jpeg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Latte</a><span>$2.55 - $3.15</span>
               </div>
@@ -135,7 +135,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-espresso">
-              <img src="/static/assets/img/cappuccino.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/cappuccino.webp" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Cappuccino</a><span>$3.60 - $4.15</span>
               </div>
@@ -145,7 +145,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-espresso">
-              <img src="/static/assets/img/red_eye.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/red eye.jpg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Red Eye</a><span>$3.75 - $4.25</span>
               </div>
@@ -165,7 +165,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-espresso">
-              <img src="/static/assets/img/macchiato.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/macchiato.webp" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Macchiato</a><span>$4.05 - $5.15</span>
               </div>
@@ -185,7 +185,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-espresso">
-              <img src="/static/assets/img/dirty_chai.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/dirty chai.jpg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Dirty Chai</a><span>$3.20 - $3.75</span>
               </div>
@@ -203,7 +203,7 @@
   <!-- Specialty menu items -->
     <h3 class="menu-divider" id="specialty-menu">Specialty</h3>
     <div class="col-lg-6 menu-item filter-specialty">
-      <img src="/static/assets/img/espresso.jpg" class="menu-img" alt="">
+      <img src="/static/assets/img/smoothie.jpg" class="menu-img" alt="">
       <div class="menu-content">
         <a href="#">Smoothies</a><span>$5.99</span>
       </div>
