--- a/web_app/templates/menu.html
+++ b/web_app/templates/menu.html
@@ -46,7 +46,7 @@
             </div>
   
             <div class="col-lg-6 menu-item filter-active">
-              <img src="/static/assets/img/half_and_half.jpg" class="menu-img" alt="">
+              <img src="/static/assets/img/half and half.jpg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Half and Half</a><span>Hot: $3.60 - $4.15 | Iced: $3.95 - $4.50</span>
               </div>
