--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -82,8 +82,8 @@
                   <div class="member-info">
                       <h4>Damian Delong</h4>
                       <div class="social">
-                          <a href="https://www.instagram.com/damian_delong"><i class="bi bi-instagram"></i></a>
-                          <a href="https://www.linkedin.com/in/damian_delong"><i class="bi bi-linkedin"></i></a>
+                          <a href="https://www.instagram.com/dima_delong/"><i class="bi bi-instagram"></i></a>
+                          <a href="https://www.linkedin.com/in/damiandelong"><i class="bi bi-linkedin"></i></a>
                       </div>
                   </div>
               </div>
