--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -22,12 +22,14 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
 
     <!-- Google Analytics  -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ config.GA_TRACKER_ID }}"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDF2GWZW8Y"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', '{{ config.GA_TRACKER_ID }}');
+
+        gtag('config', 'G-HDF2GWZW8Y');
     </script>
 
     <style>
@@ -182,8 +184,18 @@
                     <p class="small">
                         Made with the <a href="https://github.com/prof-rossetti/flask-sheets-starter-2023">Flask Sheets Starter Template</a>
                     </p>
+                    <p class="small">
+                        &copy; Copyright <strong><span>Restaurantly</span></strong>. All Rights Reserved
+                    </p>
+                    <p class="small">
+                        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                    </p>
+                  <!-- All the links in the footer should remain intact. -->
+                  <!-- You can delete the links only if you purchased the pro version. -->
+                  <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                  <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
                 </div>
-            </div>
+            </div>        
         </footer>
     </div>
 
