--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>My App</title>
+    <title>Uncommon Grounds</title>
 
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <!-- Favicons -->
+    <link href="/static/assets/img/corp.jpeg" rel="icon">
+    <link href="/static/assets/img/corp.jpeg" rel="apple-touch-icon">
 
 
 
@@ -28,7 +30,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
+        
         gtag('config', 'G-HDF2GWZW8Y');
     </script>
 
