old favicon deleted

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -7,9 +7,8 @@
     <title>Uncommon Grounds</title>
 
     <!-- Favicons -->
-    <link href="/static/assets/img/corp.jpeg" rel="icon">
-    <link href="/static/assets/img/corp.jpeg" rel="apple-touch-icon">
-
+    <link href="/web_app/static/assets/img/corp.jpeg" rel="icon">
+    <link href="/web_app/static/assets/img/corp.jpeg" rel="apple-touch-icon">
 
 
     <!-- Bootstrap CSS -->
@@ -30,7 +29,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        
+
         gtag('config', 'G-HDF2GWZW8Y');
     </script>
 
