menu pic update

--- a/web_app/templates/menu.html
+++ b/web_app/templates/menu.html
@@ -135,7 +135,7 @@
             </div>
     
             <div class="col-lg-6 menu-item filter-espresso">
-              <img src="/static/assets/img/cappuccino.webp" class="menu-img" alt="">
+              <img src="/static/assets/img/cappuccino_copy.jpeg" class="menu-img" alt="">
               <div class="menu-content">
                 <a href="#">Cappuccino</a><span>$3.60 - $4.15</span>
               </div>
