--- a/web_app/static/style.css
+++ b/web_app/static/style.css
@@ -41,7 +41,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://raw.githubusercontent.com/ryanrs93/pics_uncommon_grounds/main/mocha.jpg") top center;
+  background: url("https://raw.githubusercontent.com/ryanrs93/pics_uncommon_grounds/main/counter.jpg.webp") top center;
   background-size: cover;
   position: relative;
   padding: 0;
@@ -331,7 +331,7 @@ section {
 # About
 --------------------------------------------------------------*/
 .about {
-  background: url("https://raw.githubusercontent.com/ryanrs93/pics_uncommon_grounds/main/mocha.jpg") center center;
+  background: url("https://raw.githubusercontent.com/ryanrs93/pics_uncommon_grounds/main/Uncommon_inside.jpeg") center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
