--- a/web_app/templates/products.html
+++ b/web_app/templates/products.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-    <h1>Products</h1>
+    <h1>Order</h1>
 
-    <p class="lead">This is the products page</p>
+    <p class="lead">Click "Order Now" to place an order for each item</p>
 
     {% if products|length > 0 %}
 
@@ -29,7 +29,7 @@
                                 <input type="hidden" name="product_description" value="{{ product.description }}">
                                 <input type="hidden" name="product_price" value="{{ product.price }}">
                                 <input type="hidden" name="product_url" value="{{ product.url }}">
-                                <button type="submit" class="btn btn-outline-primary">Order now!</button>
+                                <button type="submit" class="btn btn-outline-secondary">Order now!</button>
                              </form>
 
 
