Order Online redirect

--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -23,7 +23,7 @@
         }
        
         .custom-cropping {
-    object-position: right center; /
+         object-position: right center; 
 }
 
         .member:hover img {
