--- a/web_app/templates/user_orders.html
+++ b/web_app/templates/user_orders.html
@@ -9,7 +9,7 @@
 
         <p class="lead">
             Oh, you have not yet placed an order.
-            Please visit the <a href="/products">products page</a>!
+            Please visit the <a href="/products">Order Online page</a>!
         </p>
 
     {% else %}
