Google Button add

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -9,6 +9,7 @@
     <!-- Favicons -->
     <link href="/web_app/static/assets/img/corp.jpeg" rel="icon">
     <link href="/web_app/static/assets/img/corp.jpeg" rel="apple-touch-icon">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 
     <!-- Bootstrap CSS -->
